Closed Bug 1699683 Opened 4 years ago Closed 4 years ago

Enabling the profiler with the IO interposer to profile tests in debug builds leaks in content processes at shutdown

Categories

(Core :: Gecko Profiler, defect, P2)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: florian, Assigned: florian)

References

Details

Attachments

(1 file)

Step to reproduce:
MOZ_PROFILER_STARTUP=1 MOZ_PROFILER_STARTUP_FEATURES="nostacksampling,js,fileio" ./mach test browser/components/customizableui/test/browser_885530_showInPrivateBrowsing.js --headless

Result:

== BloatView: ALL (cumulative) LEAK AND BLOAT STATISTICS, tab process 33461

     |<----------------Class--------------->|<-----Bytes------>|<----Objects---->|
     |                                      | Per-Inst   Leaked|   Total      Rem|
   0 |TOTAL                                 |       31      400|   18240        4|
  88 |MasterList                            |       32       32|       1        1|
 107 |ObserverLists                         |      176      352|       2        2|
 156 |PerThreadData                         |       16       16|      10        1|

nsTraceRefcnt::DumpStatistics: 369 entries
leakcheck: tab leaked 1 MasterList
leakcheck: tab leaked 2 ObserverLists
leakcheck: tab leaked 1 PerThreadData

at shutdown for every content process.
The parent and socket processes don't leak.

Note: Setting MOZ_PROFILER_STARTUP_FEATURES="nostacksampling,js,fileio" is to avoid bug 1699681. These 2 bugs are usually encountered together when using the default feature set.

Assignee: nobody → florian
Status: NEW → ASSIGNED
Severity: -- → S3
Priority: -- → P2
Pushed by fqueze@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/52d8d91ab99c
Uninitialize the IOInterposer at content process shutdown, r=gerald,aklotz.
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
See Also: → 1830523
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: