Bug 1699683 - Uninitialize the IOInterposer at content process shutdown, r=gerald,aklotz.

Differential Revision: https://phabricator.services.mozilla.com/D109162